# ActivityRecognition

./: readme.md
app/: pubspec.yaml
app/android/app/: build.gradle
app/assets/: labels.txt  model.tflite
app/lib/: main.dart
model_training/: .gitignore  main.py  pyproject.toml  test.py  tflite_converter.py
model_training/data/: algos.py  groups.py
model_training/models/randforest_all/: keras_metadata.pb  saved_model.pb
model_training/models/randforest_all/variables/: variables.data-00000-of-00001  variables.index
model_training/models/randforest_right_pocket/: saved_model.pb
model_training/models/randforest_right_pocket/variables/: variables.data-00000-of-00001  variables.index
model_training/models/randforest_upperarm/: keras_metadata.pb  saved_model.pb
model_training/models/randforest_upperarm/variables/: variables.data-00000-of-00001  variables.index
model_training/models/randforest_wrist/: keras_metadata.pb  saved_model.pb
model_training/models/randforest_wrist/variables/: variables.data-00000-of-00001  variables.index
model_training/testing_model/: keras_metadata.pb  saved_model.pb
model_training/testing_model/variables/: variables.data-00000-of-00001  variables.index
