[tool.poetry]
name = "model_training"
version = "0.1.0"
description = ""
authors = ["ICheered <tjeerd992@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
tensorflow = "^2.6.0"
pandas = "^1.3.3"
tensorflow-decision-forests = "^0.1.9"
tensorflow-text = "^2.6.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
